add slider scroll bar animate

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main class="main">
         <section class="section__hero container-fluid">
             <div class="hero__content container">
-                <div class="hero__title">
+                <div class="hero__title rainbow--text">
                     <h1>Креативное агентство</h1>
                 </div>
                 <div class="hero__company--name">
@@ -66,6 +66,13 @@
                 </div>
                 <div class="oil__img oil--two">
                     <img src="./img/oil.png" alt="Картинки капли">
+                </div>
+                <div class="slider--scroll-bar">
+                    <div class="slider--scroll-bar__content">
+                        <div class="circle">
+                            <img src="./img/Ellipse.svg" alt="Кружок слайдера">
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
