--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#" class="nav--link">Главная</a>
+                        <a href="#" class="nav--link">Услуги</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav--link">Окна</a>
+                        <a href="#" class="nav--link">О нас</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav--link">Работы</a>
+                        <a href="#" class="nav--link">Проекты</a>
                     </li>
                     <li class="nav__item">
                         <a href="#" class="nav--link">Контакты</a>
@@ -52,7 +52,7 @@
     <main class="main">
         <section class="section__hero container-fluid">
             <div class="hero__content container">
-                <div class="hero__title rainbow--text">
+                <div class="hero__title rainbow--text-hero">
                     <h1>Креативное агентство</h1>
                 </div>
                 <div class="hero__company--name">
@@ -71,6 +71,65 @@
                     <div class="slider--scroll-bar__content">
                         <div class="circle">
                             <img src="./img/Ellipse.svg" alt="Кружок слайдера">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section__Services container-fluid">
+            <div class="section__content container">
+                <div class="services__title main--title rainbow--text">
+                    <h2>Услуги</h2>
+                </div>
+                <div class="services__desk main--desk">
+                    <p>Мы предоставляем широкий спектр услуг<br>
+                        в сфере киберспорта, дизайна и менеджмента.</p>
+                </div>
+                <div class="services__list">
+                    <div class="services__item item--row cyber--row">
+                        <div class="item__img">
+                            <img src="./img/cyber-player.png" alt="Кибер спортсмен на турнире">
+                        </div>
+                        <div class="item__text">
+                            <div class="text__title">
+                                <h3>Киберспорт.</h3>
+                            </div>
+                            <div class="text__main-text text--cyber">
+                                <p class="main__text--item">Организация турниров под ключ</p>
+                                <p class="main__text--item">Освещение киберспортивных<br>
+                                    мероприятий из профессиональной студии</p>
+                                <p class="main__text--item">Судейство и курирование турнира</p>
+                            </div>
+                        </div>
+                        <div class="item__button">
+                            <a href="#"><img class="arrow--btn" src="./img/arrow-btn.svg" alt=""></a>
+                        </div>
+                        <div class="item__number-text gray--number">
+                            <p>01</p>
+                        </div>
+                    </div>
+                    <hr class="services--hr" />
+                    <div class="services__item item--row design--row">
+                        <div class="item__img">
+                            <img src="./img/design.png" alt="Кибер спортсмен на турнире">
+                        </div>
+                        <div class="item__text">
+                            <div class="text__title">
+                                <h3>Дизайн.</h3>
+                            </div>
+                            <div class="text__main-text text--design">
+                                <p class="main__text--item">Разработка айдентики и брендинг</p>
+                                <p class="main__text--item">Веб-дизайн</p>
+                                <p class="main__text--item">Создание моушн-графики</p>
+                                <p class="main__text--item">Создание дизайна игровых худов 
+                                    и их разработка</p>
+                            </div>
+                        </div>
+                        <div class="item__button">
+                            <a href="#"><img class="arrow--btn" src="./img/arrow-btn.svg" alt=""></a>                           
+                        </div>
+                        <div class="item__number-text gray--number">
+                            <p>02</p>
                         </div>
                     </div>
                 </div>
