--- a/index.html
+++ b/index.html
@@ -132,6 +132,50 @@
                             <p>02</p>
                         </div>
                     </div>
+                    <hr class="services--hr" />
+                    <div class="services__item item--row prod--row">
+                        <div class="item__img">
+                            <img src="./img/cyber-player.png" alt="Кибер спортсмен на турнире">
+                        </div>
+                        <div class="item__text">
+                            <div class="text__title">
+                                <h3>Продакшн.</h3>
+                            </div>
+                            <div class="text__main-text text--prod">
+                                <p class="main__text--item">Съемка постановочные видеороликов</p>
+                                <p class="main__text--item">Прямые трансляции</p>
+                                <p class="main__text--item">Съемка шоу, видеопрограмм</p>
+                            </div>
+                        </div>
+                        <div class="item__button">
+                            <a href="#"><img class="arrow--btn" src="./img/arrow-btn.svg" alt=""></a>
+                        </div>
+                        <div class="item__number-text gray--number">
+                            <p>03</p>
+                        </div>
+                    </div>
+                    <hr class="services--hr" />
+                    <div class="services__item item--row mahagement--row">
+                        <div class="item__img">
+                            <img src="./img/cyber-player.png" alt="Кибер спортсмен на турнире">
+                        </div>
+                        <div class="item__text">
+                            <div class="text__title">
+                                <h3>Менеджмент.</h3>
+                            </div>
+                            <div class="text__main-text text--mahagement">
+                                <p class="main__text--item">Ведение проектов</p>
+                                <p class="main__text--item">Организация мероприятий</p>
+                                <p class="main__text--item">Спортивный менеджмент</p>
+                            </div>
+                        </div>
+                        <div class="item__button">
+                            <a href="#"><img class="arrow--btn" src="./img/arrow-btn.svg" alt=""></a>
+                        </div>
+                        <div class="item__number-text gray--number">
+                            <p>04</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
