--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <hr class="services--hr" />
                     <div class="services__item item--row prod--row">
                         <div class="item__img">
-                            <img src="./img/cyber-player.png" alt="Кибер спортсмен на турнире">
+                            <img src="./img/prod.png" alt="Кибер спортсмен на турнире">
                         </div>
                         <div class="item__text">
                             <div class="text__title">
@@ -157,7 +157,7 @@
                     <hr class="services--hr" />
                     <div class="services__item item--row mahagement--row">
                         <div class="item__img">
-                            <img src="./img/cyber-player.png" alt="Кибер спортсмен на турнире">
+                            <img src="./img/management.png" alt="Кибер спортсмен на турнире">
                         </div>
                         <div class="item__text">
                             <div class="text__title">
