--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
             </div>
         </section>
     </main>
+    <footer>
+        
+    </footer>
     <script src="./js/header.js"></script>
 </body>
 </html>
