--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@
         </section>
     </main>
     <footer>
-        
+
     </footer>
+    <!--script-->
     <script src="./js/header.js"></script>
 </body>
 </html>
