--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <footer>
 
     </footer>
-    <!--script-->
+    <!--script!-->
     <script src="./js/header.js"></script>
 </body>
 </html>
