--- a/index.html
+++ b/index.html
@@ -267,9 +267,39 @@
                             </div>
                             <div class="text__btn--more">
                                 <a href="#"><img src="./img/arrow.png" alt="bet-boom league"></a>
-                                
                             </div>
                         </div>
+                    </div>
+                </div>
+                <!-- END PROJ ROWS-->
+                <div class="proj--dop--text">
+                    <a class="dop--text" href="#">Показать все</a>
+                </div>
+            </div>
+        </section>
+        <section class="our-clients__section container-fluid">
+            <div class="our-clients__content container">
+                <div class="our-clients__title main--title">
+                    <h3>Наши клиенты</h3>
+                </div>
+                <div class="clients__wrapper">
+                    <div class="clints__item">
+                        <img src="./img/client-logo1.png" alt="Логотип компании">
+                    </div>
+                    <div class="clints__item">
+                        <img src="./img/client-logo2.png" alt="Логотип компании">
+                    </div>
+                    <div class="clints__item">
+                        <img src="./img/client-logo3.png" alt="Логотип компании">
+                    </div>
+                    <div class="clints__item">
+                        <img src="./img/client-logo4.png" alt="Логотип компании">
+                    </div>
+                    <div class="clints__item">
+                        <img src="./img/client-logo5.png" alt="Логотип компании">
+                    </div>
+                    <div class="clints__item">
+                        <img src="./img/client-logo6.png" alt="Логотип компании">
                     </div>
                 </div>
             </div>
