--- a/index.html
+++ b/index.html
@@ -304,11 +304,64 @@
                 </div>
             </div>
         </section>
+        <section class="otziv__section container__fluid">
+            <div class="otziv__content container">
+                <div class="otziv__title main--title">
+                    <h3>Отзывы</h3>
+                </div>
+                <div class="slider">
+                    <div class="slider-list">
+                      <div class="slider-track">
+                        <div class="slide">
+                            <p class="slide--text">“Мы рады, что воспользовались
+                                вашими услугами. Весь коллектив был 
+                                очень доволен”
+                            </p>
+                            <p class="slide--sign">ПАО МОЭП “ГАЗПРОМ”</p>
+                        </div>
+                        <div class="slide">
+                            <p class="slide--text">“Мы рады, что воспользовались
+                                вашими услугами. Весь коллектив был 
+                                очень доволен”
+                            </p>
+                            <p class="slide--sign">ПАО МОЭП “ГАЗПРОМ”</p>
+                        </div>
+                        <div class="slide">
+                            <p class="slide--text">“Мы рады, что воспользовались
+                                вашими услугами. Весь коллектив был 
+                                очень доволен”
+                            </p>
+                            <p class="slide--sign">ПАО МОЭП “ГАЗПРОМ”</p>
+                        </div>
+                        <div class="slide">
+                            <p class="slide--text">“Мы рады, что воспользовались
+                                вашими услугами. Весь коллектив был 
+                                очень доволен”
+                            </p>
+                            <p class="slide--sign">ПАО МОЭП “ГАЗПРОМ”</p>
+                        </div>
+                        <div class="slide">
+                            <p class="slide--text">“Мы рады, что воспользовались
+                                вашими услугами. Весь коллектив был 
+                                очень доволен”
+                            </p>
+                            <p class="slide--sign">ПАО МОЭП “ГАЗПРОМ”</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="slider-arrows">
+                      <button type="button" class="prev">&larr;</button>
+                      <button type="button" class="next">&rarr;</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
     </footer>
     <!--script!-->
     <script src="./js/header.js"></script>
+    <script src="./js/slider.js"></script>
 </body>
 </html>
