add footer and connect block

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <header class="header container-fluid">
         <div class="hedaer__content container">
             <div class="header__logo">
-                <img src="./img/logo.svg" alt="логотип Air-time-Studio">
+                <a href="index.html" class="logo__home">
+                    <img src="./img/logo.svg" alt="логотип Air-time-Studio">
+                </a>
+                
             </div>
             <nav class="nav">
                 <ul class="nav__list">
@@ -304,9 +307,9 @@
                 </div>
             </div>
         </section>
-        <section class="otziv__section container__fluid">
-            <div class="otziv__content container">
-                <div class="otziv__title main--title">
+        <section class="review__section container__fluid">
+            <div class="review__content container">
+                <div class="review__title main--title">
                     <h3>Отзывы</h3>
                 </div>
                 <div class="slider">
@@ -356,9 +359,42 @@
                 </div>
             </div>
         </section>
+        <section class="connect__section container-fluid">
+            <div class="connect__content container">
+                <div class="connect__text">
+                    <div class="connect__title">
+                        <p>Хотите с нами сотрудничать,<br>
+                            но не знаете с чего начать?</p>
+                    </div>
+                    <div class="connect__desk">
+                        <p>Оставьте заявку и наши менеджеры сами<br> с вами свяжутся. Мы проконсультируем<br>
+                            Вас по всем вопросам. </p>
+                    </div>
+                </div>
+                <div class="connect__button">
+                    Оставить заявку
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="container-fluid">
+        <div class="footer__content container">
+            <div class="footer__logo">
+                <img src="./img/footer-logo.png" alt="Footer logo">
+            </div>
+            <div class="footer__links">
+                <a href="#">Россия, Воронеж</a>
+                <a href="#">Россия, Воронеж</a>
+            </div>
+            <div class="footer__links">
+                <a href="tel:+77777737823">+77777737823</a>
+                <a href="mailto:airtime.studio@inbox.ru">airtime.studio@inbox.ru</a>
+            </div>
+            <div class="footer__links">
+                <a href="#">Vkontaket</a>
+                <a href="#">Instagram</a>
+            </div>
+        </div>
     </footer>
     <!--script!-->
     <script src="./js/header.js"></script>
