--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#" class="nav--link">Услуги</a>
+                        <a href="#services" class="nav--link">Услуги</a>
                     </li>
                     <li class="nav__item">
                         <a href="#" class="nav--link">О нас</a>
@@ -42,7 +42,7 @@
                 </ul>
             </nav>
             <div class="header__button">
-                <a href="#" class="header--btn">Оставить заявку</a>
+                <a href="form.html" class="header--btn" target="_blank">Оставить заявку</a>
                 <span class="header--underline"></span>
             </div>
             <div class="header__burger">
@@ -79,9 +79,9 @@
                 </div>
             </div>
         </section>
-        <section class="section__Services container-fluid">
+        <section class="section__Services container-fluid" id="services">
             <div class="section__content container">
-                <div class="services__title main--title rainbow--text">
+                <div class="services__title main--title rainbow--text" >
                     <h2>Услуги</h2>
                 </div>
                 <div class="services__desk main--desk">
@@ -371,9 +371,9 @@
                             Вас по всем вопросам. </p>
                     </div>
                 </div>
-                <div class="connect__button">
+                <a href="form.html" class="connect__button" target="_blank">
                     Оставить заявку
-                </div>
+                </a>
             </div>
         </section>
     </main>
