--- a/form.html
+++ b/form.html
@@ -51,34 +51,43 @@
     <main>
         <section class="section__form container-fluid">
            <div class="form__content container">
+                <div class="arrow--to-back">
+                    <a class="arrow--back-link" href="index.html"><img src="./img/arrow-left-form.svg" alt="arrow"></a>
+                </div>
                 <div class="form__content-title main--title">
                     <h2>Оставить заявку</h2>
                 </div>
                 <div class="form__wrapper">                    
                     <form  id="form-contact" method="POST" class="contact-form" autocomplete="off" enctype="multipart/form-data">
-                        <p class="contact-form__title">Заполните заявку и получите прайс бесплатно</p>
+                        <p class="contact-form__title">Контактные данные</p>
                         <div class="preloader"></div>
                         <p class="contact-form__message"></p>
-                        <div class="contact__row">
-                            <!-- Поле с фамилией -->
-                        <div class="contact-form__input-wrapper contact-form__input-wrapper_surname">
-                            <input name="surname" type="text" class="contact-form__input contact-form__input_surname"
-                                   placeholder="Введите вашу фамилию">
-                          </div>
-                        <!-- Поле с именем -->
-                        <div class="contact-form__input-wrapper contact-form__input-wrapper_name">
-                          <input name="name" type="text" class="contact-form__input contact-form__input_name"
-                                 placeholder="Введите ваше имя">
+                        <div class="contact__row w-357">
+                            <!-- Поле с именем -->
+                            <div class="contact-form__input-wrapper contact-form__input-wrapper_name">
+                                <input name="name" type="text" class="contact-form__input contact-form__input_name"
+                                   placeholder="Ваше имя">
+                            </div>
+                            <!-- Поле с Почтой -->
+                            <div class="contact-form__input-wrapper contact-form__input-wrapper_email">
+                                <input name="email" type="email" class="contact-form__input contact-form__input_email"
+                                 placeholder="Ваш E-mail">
+                            </div>
+                            <!-- Поле с телефоном -->
+                            <div class="contact-form__input-wrapper contact-form__input-wrapper_phone">
+                                <input name="phone" type="tel" class="contact-form__input contact-form__input_phone"
+                                   placeholder="Телефон">
+                            </div>
                         </div>
-                        </div>                                                
-                        <!-- Поле с телефоном -->
-                        <div class="contact-form__input-wrapper contact-form__input-wrapper_phone">
-                          <input name="phone" type="tel" class="contact-form__input contact-form__input_phone"
-                                 placeholder="Введите ваш номер">
-                        </div>                                                                    
+                        <div class="contact__row about--project--form">
+                            <p class="contact-form__title">Несколько слов о проекте</p>
+                            <input name="message" type="text" class="contact-form__input contact-form__input_message"
+                                   placeholder="Сообщение">
+                        </div>                                               
+                                                                                     
                         <!--Поле с темой в письме-->
                         <input name="theme" type="hidden" class="contact-form__input contact-form__input_theme"
-                               value="заявка с сайта Спецмастер">                       
+                               value="заявка с сайта Air Time Studio">                       
                         <!--Кнопка отправки формы-->
                         <button type="submit" class="contact-form__button" onclick="window.location.href='https://'">Отправить</button>
                        <!-- onclick="window.location.href='http://192.168.0.111/login.html'"-->
