create proj page

--- a/form.html
+++ b/form.html
@@ -28,13 +28,13 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#services" class="nav--link">Услуги</a>
+                        <a href="index.html#services" class="nav--link">Услуги</a>
                     </li>
                     <li class="nav__item">
                         <a href="#" class="nav--link">О нас</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav--link">Проекты</a>
+                        <a href="projects.html" class="nav--link">Проекты</a>
                     </li>
                     <li class="nav__item">
                         <a href="#" class="nav--link">Контакты</a>
