--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a href="#" class="nav--link">О нас</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav--link">Проекты</a>
+                        <a href="projects.html" class="nav--link">Проекты</a>
                     </li>
                     <li class="nav__item">
                         <a href="#" class="nav--link">Контакты</a>
