create about page

--- a/form.html
+++ b/form.html
@@ -31,7 +31,7 @@
                         <a href="index.html#services" class="nav--link">Услуги</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav--link">О нас</a>
+                        <a href="about.html" class="nav--link">О нас</a>
                     </li>
                     <li class="nav__item">
                         <a href="projects.html" class="nav--link">Проекты</a>
