--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a href="#services" class="nav--link">Услуги</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav--link">О нас</a>
+                        <a href="about.html" class="nav--link">О нас</a>
                     </li>
                     <li class="nav__item">
                         <a href="projects.html" class="nav--link">Проекты</a>
@@ -276,7 +276,7 @@
                 </div>
                 <!-- END PROJ ROWS-->
                 <div class="proj--dop--text">
-                    <a class="dop--text" href="#">Показать все</a>
+                    <a class="dop--text" href="projects.html">Показать все</a>
                 </div>
             </div>
         </section>
