--- a/projects.html
+++ b/projects.html
@@ -97,7 +97,7 @@
                                     <p>Менеджмент</p>
                                 </div>
                                 <div class="text__btn--more">
-                                    <a href="#"><img src="./img/arrow.png" alt="bet-boom league"></a>
+                                    <a href="betboomproject.html"><img src="./img/arrow.png" alt="bet-boom league"></a>
                                     
                                 </div>
                             </div>
