--- a/betboomproject.html
+++ b/betboomproject.html
@@ -218,6 +218,7 @@
                     <div class="basic--text result--text">
                         <p>Наша команда смогла закрыть все, стоящие перед нами задачи в области спортивного менеджмента и успешно провела турнир,  закончив его на lan финале в Москве.</p>
                     </div>
+                    <!-- Buttons Prev and Next-->
                     <div class="btn__row--next--prev">
                         <a href="form.html" class="connect__button" target="_blank">
                             Оставить заявку
