--- a/betboomproject.html
+++ b/betboomproject.html
@@ -220,8 +220,12 @@
                     </div>
                     <!-- Buttons Prev and Next-->
                     <div class="btn__row--next--prev">
-                        <a href="form.html" class="connect__button" target="_blank">
-                            Оставить заявку
+                        <a href="projects.html" class="project__button" target="_blank">
+                            Все проекты
+                        </a>
+                        <span class="rainbow--line"></span>
+                        <a href="form.html" class="project__button right--btn" target="_blank">
+                            Следующий проект
                         </a>
                     </div>
                 </div>
