--- a/projects.html
+++ b/projects.html
@@ -161,7 +161,7 @@
                                     <p>Дизайн</p>
                                 </div>
                                 <div class="text__btn--more">
-                                    <a href="#"><img src="./img/arrow.png" alt="bet-boom league"></a>
+                                    <a href="takeoffproject.html"><img src="./img/arrow.png" alt="bet-boom league"></a>
                                 </div>
                             </div>
                         </div>
