--- a/takeoffproject.html
+++ b/takeoffproject.html
@@ -53,7 +53,9 @@
         </div>
     </header>
     <main>
-        
+        <section class="project__section container-fluid take-off--project">
+            
+        </section>
     </main>
     <footer class="container-fluid">
         <div class="footer__content container">
