new page project

--- a/betboomproject.html
+++ b/betboomproject.html
@@ -160,7 +160,7 @@
                             <div class="tasks__col">
                                 <div class="grey--number">02</div>
                                 <div class="tasks__text">
-                                    <p>СРазработана система и формат проведения турнира, составлено расписание матчей на весь период лиги;</p>
+                                    <p>Разработана система и формат проведения турнира, составлено расписание матчей на весь период лиги;</p>
                                 </div>
                             </div>
                         </div>
