--- a/takeoffproject.html
+++ b/takeoffproject.html
@@ -54,7 +54,122 @@
     </header>
     <main>
         <section class="project__section container-fluid take-off--project">
-            
+            <div class="project__content container">
+                <div class="arrow--to-back">
+                    <a class="arrow--back-link" href="index.html"><img src="./img/arrow-left-form.svg" alt="arrow"></a>
+                </div>
+                <div class="project__content-title main--title">
+                    <h2>Редизайн турнирной<br>
+                        платформы Takeoff</h2>
+                </div>
+                <div class="project__wrapper">
+                    <div class="hero__row">
+                        <div class="hero__img">
+                            <img src="./img/takeoff.png" alt="banner">
+                        </div>
+                        <div class="hero__text">
+                            <div class="hero__text-desk">
+                                <p> <strong>Takeoff</strong>  - платформа для поклонников киберспорта, позволяющая участвовать в турнирах по CS:GO игрокам с любым уровнем подготовки.</p>
+                            </div>
+                            <div class="hero__text-key key--take-off">
+                                <p>Ключевая задача</p>
+                            </div>
+                            <div class="hero__text-words hero--take-off">
+                                <p>Разработать новую айдентику, ассоциирующуюся с играми, киберспортом, желанием играть и побеждать.</p>
+                                <p>Разработать UI/UX дизайн, который будет понятен и удобен для пользователя. 
+                                    Учесть айдентику платформы и создать
+                                    стильный дизайн.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--task wrapper-->
+                    <div class="tasks__wrapper tasks--done">
+                        <div class="tasks--done--title">
+                            <p>Выполнение работы:</p>
+                        </div>
+                        <div class="tasks__row">
+                            <div class="tasks__col">
+                                <div class="grey--number">01</div>
+                                <div class="tasks__text">
+                                    <p>Анализ турнирных платформ</p>
+                                </div>
+                            </div>
+                            <div class="tasks__col">
+                                <div class="grey--number">02</div>
+                                <div class="tasks__text">
+                                    <p>Разработка айдентики платформы</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Task Row-->
+                        <div class="tasks__row">
+                            <div class="tasks__col">
+                                <div class="grey--number">03</div>
+                                <div class="tasks__text">
+                                    <p>Разработка интуитивно понятной структуры сайта, позволяющей легко ориентироваться на платформе</p>
+                                </div>
+                            </div>
+                            <div class="tasks__col">
+                                <div class="grey--number">04</div>
+                                <div class="tasks__text">
+                                    <p>Разработка стильного, современного дизайна сайта, не уступающий конкурентам</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Task Row-->
+                        <div class="tasks__row">
+                            <div class="tasks__col">
+                                <div class="grey--number">05</div>
+                                <div class="tasks__text">
+                                    <p>Создание дизайна для группы “Takeoff” в ВК</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Task Row-->
+                    </div>
+                    <!-- END task wrapper-->
+                    <div class="take-off__main-img">
+                        <div class="tasks--done--title">
+                            <h2>Дизайн сайта</h2>
+                        </div>
+                        <img src="./img/take-off-main.png" alt="main img">
+                    </div>
+                    <div class="take-off__additional-img">
+                        <div class="tasks--done--title">
+                            <h2>Дизайн группы ВК</h2>
+                        </div>
+                        <div class="take-off__hader-img">
+                            <p>Шапка</p>
+                            <img src="./img/take-off-header.png" alt="header img">
+                        </div>
+                        <div class="take-design-img designing--row">
+                            
+                            <div class="designing-col">
+                                <p>Аватарка</p>
+                                <img src="./img/take-off2.png" alt="take off img">
+                            </div>
+                            <div class="designing-col">
+                                <p>Шаблон</p>
+                                <img src="./img/pattern-info-takeoff.png" alt="take off img">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="take-off__links">
+                        <p class="rainbow--text-take-off">Готовый проект сайта:  </p><a href="https://takeoff.win/">https://takeoff.win/</a> <br>
+                        <p class="rainbow--text-take-off">Готовый проект сообщества:  </p><a href="https://takeoff.win/">https://vk.com/takeoff_win</a>
+                    </div>
+                    <!-- Buttons Prev and Next-->
+                    <div class="btn__row--next--prev">
+                        <a href="projects.html" class="project__button" target="_blank">
+                            Все проекты
+                        </a>
+                        <span class="rainbow--line"></span>
+                        <a href="form.html" class="project__button right--btn" target="_blank">
+                            Следующий проект
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="container-fluid">
