--- a/takeoffproject.html
+++ b/takeoffproject.html
@@ -158,7 +158,7 @@
                         <p class="rainbow--text-take-off">Готовый проект сайта:  </p><a href="https://takeoff.win/">https://takeoff.win/</a> <br>
                         <p class="rainbow--text-take-off">Готовый проект сообщества:  </p><a href="https://takeoff.win/">https://vk.com/takeoff_win</a>
                     </div>
-                    <!-- Buttons Prev and Next!!-->
+                    <!-- Buttons Prev and Next!!!-->
                     <div class="btn__row--next--prev">
                         <a href="projects.html" class="project__button" target="_blank">
                             Все проекты
