create new page

--- a/betboomproject.html
+++ b/betboomproject.html
@@ -56,7 +56,7 @@
         <section class="project__section container-fluid betboom--project">
             <div class="project__content container">
                 <div class="arrow--to-back">
-                    <a class="arrow--back-link" href="index.html"><img src="./img/arrow-left-form.svg" alt="arrow"></a>
+                    <a class="arrow--back-link" href="projects.html"><img src="./img/arrow-left-form.svg" alt="arrow"></a>
                 </div>
                 <div class="project__content-title main--title">
                     <h2>BetBoom медиа-лига</h2>
