--- a/index.html
+++ b/index.html
@@ -71,16 +71,19 @@
                     <img src="./img/oil.png" alt="Картинки капли">
                 </div>
                 <div class="slider--scroll-bar">
-                    <div class="slider--scroll-bar__content">
-                        <div class="circle">
-                            <img src="./img/Ellipse.svg" alt="Кружок слайдера">
+                    <a href="#link_services_scrollbar">
+                        <div class="slider--scroll-bar__content">
+                            <div class="circle">
+                                <img src="./img/Ellipse.svg" alt="Кружок слайдера">
+                            </div>
                         </div>
-                    </div>
+                    </a>
+                    
                 </div>
             </div>
         </section>
         <section class="section__Services container-fluid" id="services">
-            <div class="section__content container">
+            <div class="section__content container" id="link_services_scrollbar">
                 <div class="services__title main--title rainbow--text" >
                     <h2>Услуги</h2>
                 </div>
@@ -105,7 +108,7 @@
                             </div>
                         </div>
                         <div class="item__button">
-                            <a href="#"><img class="arrow--btn" src="./img/arrow-btn.svg" alt=""></a>
+                            <a href="form.html"><img class="arrow--btn" src="./img/arrow-btn.svg" alt=""></a>
                         </div>
                         <div class="item__number-text gray--number">
                             <p>01</p>
@@ -129,7 +132,7 @@
                             </div>
                         </div>
                         <div class="item__button">
-                            <a href="#"><img class="arrow--btn" src="./img/arrow-btn.svg" alt=""></a>                           
+                            <a href="form.html"><img class="arrow--btn" src="./img/arrow-btn.svg" alt=""></a>                           
                         </div>
                         <div class="item__number-text gray--number">
                             <p>02</p>
@@ -145,13 +148,13 @@
                                 <h3>Продакшн.</h3>
                             </div>
                             <div class="text__main-text text--prod">
-                                <p class="main__text--item">Съемка постановочные видеороликов</p>
+                                <p class="main__text--item">Съемка постановочных видеороликов</p>
                                 <p class="main__text--item">Прямые трансляции</p>
                                 <p class="main__text--item">Съемка шоу, видеопрограмм</p>
                             </div>
                         </div>
                         <div class="item__button">
-                            <a href="#"><img class="arrow--btn" src="./img/arrow-btn.svg" alt=""></a>
+                            <a href="form.html"><img class="arrow--btn" src="./img/arrow-btn.svg" alt=""></a>
                         </div>
                         <div class="item__number-text gray--number">
                             <p>03</p>
@@ -173,7 +176,7 @@
                             </div>
                         </div>
                         <div class="item__button">
-                            <a href="#"><img class="arrow--btn" src="./img/arrow-btn.svg" alt=""></a>
+                            <a href="form.html"><img class="arrow--btn" src="./img/arrow-btn.svg" alt=""></a>
                         </div>
                         <div class="item__number-text gray--number">
                             <p>04</p>
@@ -192,7 +195,7 @@
                         <div class="proj__img single-box">
                             <div class="box__content">
                                 <div class="slides slide-1" style="background-image: url(./img/ber-boom-lig.png);"></div>
-                                <div class="slides slide-2" style="background-image: url(./img/ber-boom-lig.png);">
+                                <div class="slides slide-2" style="background-image: url(./img/big-logo.png);">
                                 </div>
                             </div>
                             
@@ -214,7 +217,7 @@
                         <div class="proj__img single-box">
                             <div class="box__content">
                                 <div class="slides slide-1" style="background-image: url(./img/people-sofa.png);"></div>
-                                <div class="slides slide-2" style="background-image: url(./img/ber-boom-lig.png);">
+                                <div class="slides slide-2" style="background-image: url(./img/big-logo.png);">
                                 </div>
                             </div>
                         </div>
@@ -237,7 +240,7 @@
                         <div class="proj__img single-box">
                             <div class="box__content">
                                 <div class="slides slide-1" style="background-image: url(./img/champ1.png);"></div>
-                                <div class="slides slide-2" style="background-image: url(./img/ber-boom-lig.png);">
+                                <div class="slides slide-2" style="background-image: url(./img/big-logo.png);">
                                 </div>
                             </div>
                         </div>
@@ -257,7 +260,7 @@
                         <div class="proj__img single-box">
                             <div class="box__content">
                                 <div class="slides slide-1" style="background-image: url(./img/champ2.png);"></div>
-                                <div class="slides slide-2" style="background-image: url(./img/ber-boom-lig.png);">
+                                <div class="slides slide-2" style="background-image: url(./img/big-logo.png);">
                                 </div>
                             </div>
                         </div>
