--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
                             <div class="proj__img single-box">
                                 <div class="box__content">
                                     <div class="slides slide-1" style="background-image: url(./img/ber-boom-lig.png);"></div>
-                                    <div class="slides slide-2" style="background-image: url(./img/ber-boom-lig.png);">
+                                    <div class="slides slide-2" style="background-image: url(./img/big-logo.png);">
                                     </div>
                                 </div>
                                 
@@ -106,7 +106,7 @@
                             <div class="proj__img single-box">
                                 <div class="box__content">
                                     <div class="slides slide-1" style="background-image: url(./img/people-sofa.png);"></div>
-                                    <div class="slides slide-2" style="background-image: url(./img/ber-boom-lig.png);">
+                                    <div class="slides slide-2" style="background-image: url(./img/big-logo.png);">
                                     </div>
                                 </div>
                             </div>
@@ -129,7 +129,7 @@
                             <div class="proj__img single-box">
                                 <div class="box__content">
                                     <div class="slides slide-1" style="background-image: url(./img/champ1.png);"></div>
-                                    <div class="slides slide-2" style="background-image: url(./img/ber-boom-lig.png);">
+                                    <div class="slides slide-2" style="background-image: url(./img/big-logo.png);">
                                     </div>
                                 </div>
                             </div>
@@ -149,7 +149,7 @@
                             <div class="proj__img single-box">
                                 <div class="box__content">
                                     <div class="slides slide-1" style="background-image: url(./img/champ2.png);"></div>
-                                    <div class="slides slide-2" style="background-image: url(./img/ber-boom-lig.png);">
+                                    <div class="slides slide-2" style="background-image: url(./img/big-logo.png);">
                                     </div>
                                 </div>
                             </div>
@@ -171,7 +171,7 @@
                             <div class="proj__img single-box">
                                 <div class="box__content">
                                     <div class="slides slide-1" style="background-image: url(./img/landing-extensi.png);"></div>
-                                    <div class="slides slide-2" style="background-image: url(./img/ber-boom-lig.png);">
+                                    <div class="slides slide-2" style="background-image: url(./img/big-logo.png);">
                                     </div>
                                 </div>
                             </div>
@@ -183,7 +183,7 @@
                                     <p>Дизайн</p>
                                 </div>
                                 <div class="text__btn--more">
-                                    <a href="#"><img src="./img/arrow.png" alt="bet-boom league"></a> 
+                                    <a href="extenciproject.html"><img src="./img/arrow.png" alt="bet-boom league"></a> 
                                 </div>
                             </div>
                         </div>
@@ -191,7 +191,7 @@
                             <div class="proj__img single-box">
                                 <div class="box__content">
                                     <div class="slides slide-1" style="background-image: url(./img/cyber-show.png);"></div>
-                                    <div class="slides slide-2" style="background-image: url(./img/ber-boom-lig.png);">
+                                    <div class="slides slide-2" style="background-image: url(./img/big-logo.png);">
                                     </div>
                                 </div>
                             </div>
@@ -214,7 +214,7 @@
                             <div class="proj__img single-box">
                                 <div class="box__content">
                                     <div class="slides slide-1" style="background-image: url(./img/shos.png);"></div>
-                                    <div class="slides slide-2" style="background-image: url(./img/ber-boom-lig.png);">
+                                    <div class="slides slide-2" style="background-image: url(./img/big-logo.png);">
                                     </div>
                                 </div>
                             </div>
@@ -234,7 +234,7 @@
                             <div class="proj__img single-box">
                                 <div class="box__content">
                                     <div class="slides slide-1" style="background-image: url(./img/landing-cup.png);"></div>
-                                    <div class="slides slide-2" style="background-image: url(./img/ber-boom-lig.png);">
+                                    <div class="slides slide-2" style="background-image: url(./img/big-logo.png);">
                                     </div>
                                 </div>
                             </div>
@@ -246,7 +246,7 @@
                                     <p>Дизайн</p>
                                 </div>
                                 <div class="text__btn--more">
-                                    <a href="#"><img src="./img/arrow.png" alt="bet-boom league"></a>
+                                    <a href="winlineproject.html"><img src="./img/arrow.png" alt="bet-boom league"></a>
                                 </div>
                             </div>
                         </div>
@@ -257,7 +257,7 @@
                             <div class="proj__img single-box">
                                 <div class="box__content">
                                     <div class="slides slide-1" style="background-image: url(./img/vksl.png);"></div>
-                                    <div class="slides slide-2" style="background-image: url(./img/ber-boom-lig.png);">
+                                    <div class="slides slide-2" style="background-image: url(./img/big-logo.png);">
                                     </div>
                                 </div>
                             </div>
