--- a/form.html
+++ b/form.html
@@ -41,6 +41,10 @@
                     </li>
                 </ul>
             </nav>
+            <div class="header__button header__button_hidden">
+                <a href="form.html" class="header--btn" target="_blank">Оставить заявку</a>
+                <span class="header--underline"></span>
+            </div>
             <div class="header__burger">
                 <span class="left--stick stick"></span>
                 <span class="right--stick stick"></span>
