winline proj create

--- a/winlineproject.html
+++ b/winlineproject.html
@@ -53,7 +53,7 @@
         </div>
     </header>
     <main>
-        <section class="project__section container-fluid extenci--project">
+        <section class="project__section container-fluid winline--project">
             <div class="project__content container">
                 <div class="arrow--to-back">
                     <a class="arrow--back-link" href="projects.html"><img src="./img/arrow-left-form.svg" alt="arrow"></a>
