create gazprom page

--- a/gazpromproject.html
+++ b/gazpromproject.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#ffffff">
     <!--Favicons!-->
     <link rel="stylesheet" href="./css/style.min.css">
-    <title>Cyber Students Project</title>
+    <title>Gazprom Project</title>
 </head>
 <body>
     <header class="header container-fluid">
@@ -59,92 +59,30 @@
                     <a class="arrow--back-link" href="projects.html"><img src="./img/arrow-left-form.svg" alt="arrow"></a>
                 </div>
                 <div class="project__content-title main--title cyber-student_rainbow">
-                    <h2>Всероссийский студенческий<br>
-                        чемпионат “Киберстуденты”</h2>
+                    <h2>Трансляции к корпоративному <br>
+                        турниру для Газпром
+                    </h2>
                 </div>
                 <div class="project__wrapper">
                     <div class="hero__row">
                         <div class="hero__img">
-                            <img src="./img/cyberstud-banner.png" alt="banner">
+                            <img src="./img/gazprom-banner.png" alt="banner">
                         </div>
                         <div class="hero__text">
                             <div class="hero__text-desk">
-                                <p> <strong>Киберстуденты</strong> - всероссийский студенческий киберспортивный турнир,  в котором участвовали ВУЗы со всей страны. В турнире приняло участие более 1500 участников. </p>
+                                <p> <strong>Для филиала “Газпром”</strong> был организован 
+                                    турнир по дисциплине “Мир танков”, где команда
+                                    Air Time выступила, как студия, ответственная
+                                    за освещение турнира</p>
                             </div>
                             <div class="hero__text-key">
                                 <p>Ключевые задачи </p>
                             </div>
                             <div class="hero__text-words">
-                                <p>Создание айдентики турнира</p>
+                                <p>Провести прямой эфир для турнира</p>
                                 <br>
-                                <p>Проведение прямых трансляций
-                                    по дисциплинам CS:GO , DOTA2 и FIFA22</p>
-                                    <br>
-                                <p>Разработка для прототипа сайта регистрации</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="basic--text m150">
-                        <p>Проведение данного турнира требовало большой подготовки, начиная от подготовки моушн-графики турнира, заканчивая подготовкой ведущих и комментаторов.</p>
-                    </div>
-                    <!--task wrapper-->
-                    <div class="tasks__wrapper">
-                        <div class="tasks__row">
-                            <div class="tasks__col">
-                                <div class="grey--number">01</div>
-                                <div class="tasks__text">
-                                    <p>Создать уникальную айдентику турнира, 
-                                        сохранив основные цвета (черный и зеленый)</p>
-                                </div>
-                            </div>
-                            <div class="tasks__col">
-                                <div class="grey--number">02</div>
-                                <div class="tasks__text">
-                                    <p>Создать удобный и простой сайт для регистрации команд</p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Task Row-->
-                        <div class="tasks__row">
-                            <div class="tasks__col">
-                                <div class="grey--number">03</div>
-                                <div class="tasks__text">
-                                    <p>Создать дизайн для сообщества
-                                        во ВКонтакте</p>
-                                </div>
-                            </div>
-                            <div class="tasks__col">
-                                <div class="grey--number">04</div>
-                                <div class="tasks__text">
-                                    <p>Создать полный пакеты графики:<br> внутриигровой и для трансляции, сохраняя
-                                        цветовые решение дизайна турнира</p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Task Row-->
-                        <div class="tasks__row">
-                            <div class="tasks__col">
-                                <div class="grey--number">05</div>
-                                <div class="tasks__text">
-                                    <p>Провести трансляции по 3-ем 
-                                        дисциплинам: CS:GO, DOTA2, FIFA22</p>
-                                </div>
-                            </div>
-                            
-                        </div>
-                        <!-- Task Row-->                      
-                    </div>
-                    <!-- END task wrapper-->
-                    <div class="big--image-proj">
-                        <div class="big--image-proj__main">
-                            <img src="./img/cyber-1.png" alt="big banner">
-                        </div>
-                        <div class="big--image-proj__sub big--image-proj__sub_row">
-                            <div class="first--img">
-                                <img src="./img/cyber-2.png" alt="cyber photo 2">
-                            </div>
-                            <div class="second--img">
-                                <img src="./img/cyber-3.png" alt="cyber photo 3">
+                                <p>Использовать графику в трансляции, 
+                                    сохраняя фирменный стиль компании</p>
                             </div>
                         </div>
                     </div>
@@ -228,15 +166,15 @@
                         <!-- Task Row-->
                     </div>
                     <!-- END task wrapper-->
-                    <div class="tasks--done--title result--title">
-                        <p>Результат раюботы</p>
-                    </div>
-                    <div class="basic--text result--text">
-                        <p>Команда Air Time в полной мере реализовала все задачи, от создания дизайна до стриминга. 
-                            В общей сложности мы провели 7 трансляций на 15 часов эфирного времени, в каждом из которых 
-                            присутствовали ведущие, комментаторы и “аналитики”. Для каждой из дисциплин были реализованы 
-                            внутренняя графика игры (худы) и графика трансляции.</p>
-                    </div>
+                    
+                    <div class="big--image-proj">
+                        <div class="big--image-proj__main">
+                            <img src="./img/gazprom1.png" alt="big banner">
+                        </div>
+                        <div class="big--image-proj__main big--image-proj__main_mg-top">
+                            <img src="./img/gazprom2.png" alt="big banner">
+                        </div>
+                    </div>                                     
                     <!-- Buttons Prev and Next-->
                     <div class="btn__row--next--prev">
                         <a href="projects.html" class="project__button" target="_blank">
