--- a/projects.html
+++ b/projects.html
@@ -118,7 +118,7 @@
                                     <p>Киберспорт</p>
                                 </div>
                                 <div class="text__btn--more">
-                                    <a href="#"><img src="./img/arrow.png" alt="bet-boom league"></a>
+                                    <a href="gazpromproject.html"><img src="./img/arrow.png" alt="bet-boom league"></a>
                                     
                                 </div>
                             </div>
